Resolucion de preguntas

--- a/lab1.html
+++ b/lab1.html
@@ -6,17 +6,18 @@
   <body>
     <!-- datos academicos -->
       <section id=matricula>
-        <h4> Elavorado por: </h4>
+        <h4> Elaborado por: </h4>
         <p> Denisse Dominguez Bolaños </p>
         <p> A01702603 </p>
-        <p> A01702603@tec.mx> </p>
+        <p> A01702603@tec.mx </p>
       </section>
      <!-- Inroduccion -->
     <header>
       <section>
         <h1 id=intro>Un poco sobre Denisse Dominguez Bolaños </h1>
       </section>
-      <p> En este espacio compartire un poco acerca de mis <strong>aficiones y datos que considero interesantes de mi vida</strong>, espero lo disfruten </p>
+      <p> En este espacio compartire un poco acerca de mis <strong>aficiones y datos
+        que considero interesantes de mi vida</strong>, espero lo disfruten </p>
       <img id = foto src="https://i.postimg.cc/vBgbCx37/IMG-2685.jpg" width= "25%"/>
     </header>
      <!-- aficiones -->
@@ -44,19 +45,101 @@
     <section>
       <h3 id=preguntas> Preguntas y respuestas </h3>
       <ol>
-        <li> ¿Cuál es la diferencia entre Internet y la World Wide Web? </li>
-        <li> ¿Cuáles son las partes de un URL? </li>
-        <li> ¿Cuál es el propósito de los métodos HTTP: GET, HEAD, POST, PUT, PATCH, DELETE? </li>
-        <li> ¿Qué método HTTP se debe utilizar al enviar un formulario HTML, por ejemplo cuando ingresas tu usuario y contraseña en algún sitio? ¿Por qué? </li>
-        <li> ¿Qué método HTTP se utiliza cuando a través de un navegador web se accede a una página a través de un URL? </li>
-        <li> Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto? ¿Ocurrió algún error? </li>
-        <li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 404? ¿Por qué? </li>
-        <li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 500? ¿Por qué? </li>
-        <li> ¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)? Menciona algunos elementos de HTML 4 que en HTML5 estén desaprobados. </li>
-        <li> ¿Cuáles son las diferencias principales entre HTML 4 y HTML5? </li>
-        <li> ¿Qué componentes de estructura y estilo tiene una tabla? </li>
-        <li> ¿Cuáles son los principales controles de una forma HTML5? </li>
-        <li> ¿Qué tanto soporte HTML5 tiene el navegador que utilizas? </li>
+        <li> ¿Cuál es la diferencia entre Internet y la World Wide Web? Internet es el medio
+           y World Wide Web es quien accese al internet </li>
+      </br><li> ¿Cuáles son las partes de un URL?</li>
+        <ul>
+          <li> Protocolo </li>
+          <li> Subdominio </li>
+          <li> Dominio </li>
+          <li> TLD </li>
+          <li> Ruta </li>
+          <li> Parametro </li>
+          <li> Etiqueta </li>
+        </ul>
+        </br><li> ¿Cuál es el propósito de los métodos HTTP: GET, HEAD, POST, PUT, PATCH, DELETE? </li>
+        <ul>
+          <li> HTTP: Realizar petición de datos o informacón </li>
+          <li> GET: Peticion para recuperar dato en especifico  </li>
+          <li> HEAD: Manda header y hacer diagnostico </li>
+          <li> POST: Enviar informacion</li>
+          <li> PUT: Modificar todo el recurso </li>
+          <li> PATCH: Modifica solo una parte previamente especificada del recurso</li>
+          <li> DELETE: Eliminar un recurso </li>
+        </ul>
+        </br><li> ¿Qué método HTTP se debe utilizar al enviar un formulario HTML,
+          por ejemplo cuando ingresas tu usuario y contraseña en algún sitio? GET Y POST
+          ¿Por qué? GET->envia los datos. POST->los envia de manera cifrada </li>
+      </br><li> ¿Qué método HTTP se utiliza cuando a través de un navegador web se accede
+        a una página a través de un URL? GET </li>
+    </br><li> Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto?
+      Significa que la peticion ha sido recibida con exito ¿Ocurrió algún error? al contrario,
+      ha habido un exito</li>
+  </br><li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta
+    que intentó acceder al sitio y se encontró con un error 404? No ¿Por qué? Ya que es un error
+     por parte del usuario, ya sea en su interet, acceso, etc.</li>
+        </br><li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta
+          que intentó acceder al sitio y se encontró con un error 500? Es correcto ¿Por qué?
+          Porque es un error de acceso </li>
+      </br><li> ¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)?
+         Menciona algunos. Mas que nada significa que se estan haciendo uso etiquetas de presentacion, por ejemplo </li>
+      <ul>
+        <li> menu -> ul </li>
+        <li> isindex -> input </li>
+        <li> applet -> object </li>
+        <li> dir -> ul </li>
+        <li> font -> style </li>
+      </ul>
+    </br><li> ¿Cuáles son las diferencias principales entre HTML 4 y HTML5? Una de las principales
+      diferencias esque en html4 habia etiquetas para todo, mientras que en html5 solo se enfoca
+       en el contendio, dehjando la parte de presentacion a CSS y JavaScript </li>
+       <ul>
+         <li> Nuevos elementos -> footer, article, aside, figure, etc </li>
+         <li> Nuevos atributos -> media, ping, target, replace, etc </li>
+         <li> HTML5 requiere doctype </li>
+       </ul>
+        </br><li> ¿Qué componentes de estructura y estilo tiene una tabla? </li>
+        <ul>
+          <li> table -> crear tabla </li>
+          <li> tr -> filas </li>
+          <li> th -> encabezado de las filas </li>
+          <li> td -> información de los no encabezados </li>
+          </p> para mas orden:
+          <ul>
+          <li> thead -> header de la taba </li>
+          <li> tbody -> cuerpo de la tabla </li>
+          <li> tfoot -> pie de pagina de la tabla </li>
+        </ul>
+        </ul>
+        </br><li> ¿Cuáles son los principales controles de una forma HTML5? </li>
+        <ul>
+        <li> input type="number" = campo de entrada para input numerico </li>
+        <li> input type="range" = barra deslizadora </li>
+        <li> input type="color" = selector de color </li>
+        <li> input type="date" = selector de fecha </li>
+      </ul>
+      </br><li> ¿Qué tanto soporte HTML5 tiene el navegador que utilizas? 466 de 555 puntos </li>
+    </br><li>¿Cuál es el ciclo de vida de los sistemas de información? El ciclo de vida esta divido en diferentes fases, sin embargo,
+    se puede decir que es un proceso lógico para la supervision e inclusion de todos los requisitos, validaciones y formación. las fases son: </li>
+    <ul>
+    <li> Nacimiento </li>
+    <li> Desarollo </li>
+    <li> Operacion </li>
+    <li> Mantenimiento </li>
+    <li> Muerte </li>
+  </ul>
+
+      </br><li>¿Cuál es el ciclo de desarrollo de sistemas de información?</li>
+      <ul>
+      <li> Planificacion </li>
+      <li> Analisis </li>
+      <li> Diseño </li>
+      <li> Implementacion </li>
+      <li> Pruebas </li>
+      <li> Uso y Mantenimiento </li>
+      <li> Delimitacion </li>
+      <li> Estudio de viabilidad </li>
+      <li> Analisis de riesgos </li>
       </ol>
     </section>
      <!-- footer -->
