--- a/lab1.html
+++ b/lab1.html
@@ -22,7 +22,7 @@
     </header>
      <!-- aficiones -->
     <section>
-      <h3 id=aficiones><strong>Mis aficiones</strong></h3>
+      <h3><strong>Mis aficiones</strong></h3>
       <ul>
         <li>Baile Jazz</li>
         <li> Exploracion la naturaleza </li>
@@ -33,7 +33,7 @@
     </section>
      <!-- fun facts  -->
     <section>
-      <h3 id=datos><strong>Datos interesantes de mi</strong></h3>
+      <h3><strong>Datos interesantes de mi</strong></h3>
         <ol>
           <li> Soy 100% queretana, al igual que mi familia </li>
           <li> Me cambie de carrera por el amor a una materia </li>
@@ -41,13 +41,17 @@
           <li> He vivido en Suiza y Francia por pequeños intervalos de tiempo </li>
         </ol>
     </section>
-     <!-- preguntas respuestas -->
-    <section>
-      <h3 id=preguntas> Preguntas y respuestas </h3>
+     <!-- preguntas respuestas HTML5 -->
+    <section class="columnas">
+      <div class="columna2">
+      <h3> Preguntas y respuestas </h3>
       <ol>
-        <li> ¿Cuál es la diferencia entre Internet y la World Wide Web? Internet es el medio
-           y World Wide Web es quien accese al internet </li>
+      <li> ¿Cuál es la diferencia entre Internet y la World Wide Web? </li>
+      <section class="respuestaHTML1">
+        </p>Internet es el medio y World Wide Web es quien accese al internet.
+      </section>
       </br><li> ¿Cuáles son las partes de un URL?</li>
+      <section class="respuestaHTML">
         <ul>
           <li> Protocolo </li>
           <li> Subdominio </li>
@@ -57,7 +61,9 @@
           <li> Parametro </li>
           <li> Etiqueta </li>
         </ul>
-        </br><li> ¿Cuál es el propósito de los métodos HTTP: GET, HEAD, POST, PUT, PATCH, DELETE? </li>
+      </section>
+      </br><li> ¿Cuál es el propósito de los métodos HTTP: GET, HEAD, POST, PUT, PATCH, DELETE? </li>
+      <section class="respuestaHTML">
         <ul>
           <li> HTTP: Realizar petición de datos o informacón </li>
           <li> GET: Peticion para recuperar dato en especifico  </li>
@@ -67,38 +73,51 @@
           <li> PATCH: Modifica solo una parte previamente especificada del recurso</li>
           <li> DELETE: Eliminar un recurso </li>
         </ul>
-        </br><li> ¿Qué método HTTP se debe utilizar al enviar un formulario HTML,
-          por ejemplo cuando ingresas tu usuario y contraseña en algún sitio? GET Y POST
-          ¿Por qué? GET->envia los datos. POST->los envia de manera cifrada </li>
-      </br><li> ¿Qué método HTTP se utiliza cuando a través de un navegador web se accede
-        a una página a través de un URL? GET </li>
-    </br><li> Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto?
-      Significa que la peticion ha sido recibida con exito ¿Ocurrió algún error? al contrario,
-      ha habido un exito</li>
-  </br><li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta
-    que intentó acceder al sitio y se encontró con un error 404? No ¿Por qué? Ya que es un error
-     por parte del usuario, ya sea en su interet, acceso, etc.</li>
-        </br><li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta
-          que intentó acceder al sitio y se encontró con un error 500? Es correcto ¿Por qué?
-          Porque es un error de acceso </li>
+      </section>
+      </br><li> ¿Qué método HTTP se debe utilizar al enviar un formulario HTML, por ejemplo cuando ingresas tu usuario y contraseña en algún sitio? </li>
+      <section class="respuestaHTML1">
+        </p>GET Y POST: GET->envia los datos. POST->los envia de manera cifrada.
+      </section>
+      </br><li> ¿Qué método HTTP se utiliza cuando a través de un navegador web se accede a una página a través de un URL?</li>
+      <section class="respuestaHTML1">
+        </p> GET.
+      </section>
+      </br><li> Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto? ¿Ocurrió algún error? </li>
+      <section class="respuestaHTML1">
+        </p> Significa que la peticion ha sido recibida con exito, no hay error.
+      </section>
+      </br><li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 404? ¿Por qué? </li>
+      <section class="respuestaHTML1">
+        </p> No, Ya que es un error por parte del usuario, ya sea en su interet, acceso, etc.
+      </section>
+      </br><li> ¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta
+      que intentó acceder al sitio y se encontró con un error 500? ¿Por qué? </li>
+      <section class="respuestaHTML1">
+        </p>Es correcto, porque es un error de acceso
+      </section>
       </br><li> ¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)?
-         Menciona algunos. Mas que nada significa que se estan haciendo uso etiquetas de presentacion, por ejemplo </li>
-      <ul>
-        <li> menu -> ul </li>
-        <li> isindex -> input </li>
-        <li> applet -> object </li>
-        <li> dir -> ul </li>
-        <li> font -> style </li>
-      </ul>
-    </br><li> ¿Cuáles son las diferencias principales entre HTML 4 y HTML5? Una de las principales
+      Menciona algunos. Mas que nada significa que se estan haciendo uso etiquetas de presentacion, por ejemplo </li>
+      <section class="respuestaHTML">
+        <ul>
+          <li> menu -> ul </li>
+          <li> isindex -> input </li>
+          <li> applet -> object </li>
+          <li> dir -> ul </li>
+          <li> font -> style </li>
+        </ul>
+      </section>
+      </br><li> ¿Cuáles son las diferencias principales entre HTML 4 y HTML5? Una de las principales
       diferencias esque en html4 habia etiquetas para todo, mientras que en html5 solo se enfoca
-       en el contendio, dehjando la parte de presentacion a CSS y JavaScript </li>
-       <ul>
-         <li> Nuevos elementos -> footer, article, aside, figure, etc </li>
-         <li> Nuevos atributos -> media, ping, target, replace, etc </li>
-         <li> HTML5 requiere doctype </li>
-       </ul>
-        </br><li> ¿Qué componentes de estructura y estilo tiene una tabla? </li>
+      en el contendio, dehjando la parte de presentacion a CSS y JavaScript </li>
+      <section class="respuestaHTML">
+        <ul>
+          <li> Nuevos elementos -> footer, article, aside, figure, etc </li>
+          <li> Nuevos atributos -> media, ping, target, replace, etc </li>
+          <li> HTML5 requiere doctype </li>
+        </ul>
+      </section>
+      </br><li> ¿Qué componentes de estructura y estilo tiene una tabla? </li>
+      <section class="respuestaHTML">
         <ul>
           <li> table -> crear tabla </li>
           <li> tr -> filas </li>
@@ -106,41 +125,80 @@
           <li> td -> información de los no encabezados </li>
           </p> para mas orden:
           <ul>
-          <li> thead -> header de la taba </li>
-          <li> tbody -> cuerpo de la tabla </li>
-          <li> tfoot -> pie de pagina de la tabla </li>
-        </ul>
-        </ul>
-        </br><li> ¿Cuáles son los principales controles de una forma HTML5? </li>
-        <ul>
-        <li> input type="number" = campo de entrada para input numerico </li>
-        <li> input type="range" = barra deslizadora </li>
-        <li> input type="color" = selector de color </li>
-        <li> input type="date" = selector de fecha </li>
+            <li> thead -> header de la taba </li>
+            <li> tbody -> cuerpo de la tabla </li>
+            <li> tfoot -> pie de pagina de la tabla </li>
+          </ul>
       </ul>
-      </br><li> ¿Qué tanto soporte HTML5 tiene el navegador que utilizas? 466 de 555 puntos </li>
-    </br><li>¿Cuál es el ciclo de vida de los sistemas de información? El ciclo de vida esta divido en diferentes fases, sin embargo,
-    se puede decir que es un proceso lógico para la supervision e inclusion de todos los requisitos, validaciones y formación. las fases son: </li>
-    <ul>
-    <li> Nacimiento </li>
-    <li> Desarollo </li>
-    <li> Operacion </li>
-    <li> Mantenimiento </li>
-    <li> Muerte </li>
-  </ul>
-
+      </section>
+      </br><li> ¿Cuáles son los principales controles de una forma HTML5? </li>
+      <section class="respuestaHTML">
+        <ul>
+          <li> input type="number" = campo de entrada para input numerico </li>
+          <li> input type="range" = barra deslizadora </li>
+          <li> input type="color" = selector de color </li>
+          <li> input type="date" = selector de fecha </li>
+        </ul>
+      </section>
+      </br><li> ¿Qué tanto soporte HTML5 tiene el navegador que utilizas? </li>
+      <section class="respuestaHTML1">
+        </p> 466 de 555 puntos
+      </section>
+      </br><li>¿Cuál es el ciclo de vida de los sistemas de información? </li>
+      <section class="respuestaHTML">
+        </p>El ciclo de vida esta divido en diferentes fases, sin embargo,
+      se puede decir que es un proceso lógico para la supervision e inclusion de todos los requisitos, validaciones y formación. las fases son:
+        <ul>
+          <li> Nacimiento </li>
+          <li> Desarollo </li>
+          <li> Operacion </li>
+          <li> Mantenimiento </li>
+          <li> Muerte </li>
+        </ul>
+      </section>
       </br><li>¿Cuál es el ciclo de desarrollo de sistemas de información?</li>
-      <ul>
-      <li> Planificacion </li>
-      <li> Analisis </li>
-      <li> Diseño </li>
-      <li> Implementacion </li>
-      <li> Pruebas </li>
-      <li> Uso y Mantenimiento </li>
-      <li> Delimitacion </li>
-      <li> Estudio de viabilidad </li>
-      <li> Analisis de riesgos </li>
-      </ol>
+      <section class="respuestaHTML">
+        <ul>
+          <li> Planificacion </li>
+          <li> Analisis </li>
+          <li> Diseño </li>
+          <li> Implementacion </li>
+          <li> Pruebas </li>
+          <li> Uso y Mantenimiento </li>
+          <li> Delimitacion </li>
+          <li> Estudio de viabilidad </li>
+          <li> Analisis de riesgos </li>
+        </ul>
+    </section>
+  </ol>
+    </div>
+    <!-- preguntas respuestas CSS -->
+    <div class="columna2">
+      </br><li> Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS? </li>
+      <section class = respuestaCSS>
+        </p>Como recomendacion es que solo sea utilizado cuando en realidad se busque resaltar algo y dejar a un lado
+        las reglas previas, no es bueno usar simpre el ¡important ya que se estara sobrescribiendo todo el texto dejando
+        a un lado las reglas de estilo previamente marcadas.
+      </section>
+      </br><li> Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado?</li>
+      <section class = respuestaCSS>
+        </p> Debe escogerse con cuidado dado las definiciones de las pantallas, es decir, del tamaño de las ventas, al igual,
+        los pixeles interfieren, al momento de ser muy pequeños, la pagina tiene que trabajar mucho en repetir cada uno de ells
+        y finalmente puede afectar la estetica.
+      </section>
+      </br><li> Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</li>
+      <section class = respuestaCSS>
+        </p> Recomiendo utilizar px cuando se edita width, ya que asi el ancho sera el mismo sin importar los cambios futuros; el %
+        utilizarlo cuando busquemos un valor relativo a otro, es decir, relativo a un padre, y finalmente los pt y px cuando se edite
+        en cuestion de unidades absolutas, es decir, independientes,
+      </section>
+      </br><li> ¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</li>
+      <section class = respuestaCSS>
+        </p> Optimiza el rendimiento del sitio ya que el mismo no tendra la necesidad de cargar y leer archivos externos al momento
+        de agregar la estructura de la pagina, de igual manera, al comprimir los datos de CSS el navegador tarda menos en realizar la
+        lectura y pueda aplicar de manera rapida los estilos presentes.
+      </section>
+    </div>
     </section>
      <!-- footer -->
     <footer>
