Apliacion de html con referencias

--- a/lab1.html
+++ b/lab1.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Denisse Dominguez Bolaños </title>
-    <link  rel="stylesheet" href="lab1.css">
+    <link  rel="stylesheet" href="lab2.css">
   </head>
   <body>
     <!-- datos academicos -->
@@ -196,14 +196,19 @@
       <section class = respuestaCSS>
         </p> Optimiza el rendimiento del sitio ya que el mismo no tendra la necesidad de cargar y leer archivos externos al momento
         de agregar la estructura de la pagina, de igual manera, al comprimir los datos de CSS el navegador tarda menos en realizar la
-        lectura y pueda aplicar de manera rapida los estilos presentes.
+        lectura y pueda aplicar de manera rapida los estilos presentes. Evita el tiempo de leer caracteres no necesarios. La lectura es
+        más rápida.
       </section>
     </div>
     </section>
+    <div id = "agregarTabla">
+    </div>
      <!-- footer -->
     <footer>
       El editor HTML que he utilizado para el desarollo de este laboratoria ha sido
       <a href=https://codepen.io/your-work> CodePen </a>
+    </br> <a href=referencias1_2.html> Referencias </a>
     </footer>
+  <script src="lab4.js"></script>
   </body>
 </html>
