--- a/Lab6_POO/index.html
+++ b/Lab6_POO/index.html
@@ -24,6 +24,7 @@
                 <div class="input-field col s6">
                   <input id="contra1" type="text" class="validate">
                   <label for="contra1">Ingresa tu contrasena</label>
+                  <div id="contra_ingresada"></div>
                 </div>
                 <div class="input-field col s6">
                   <input id="contra2" type="tel" class="validate">
